# review-restaurants

./: pyproject.toml
review_restaurants/: docker-compose.yaml  schema.py  simple_app.py  test.py
